fix(popup): in firefox, the popup will have a scrollbar when it pops up

--- a/packages/varlet-ui/src/popup/popup.less
+++ b/packages/varlet-ui/src/popup/popup.less
@@ -69,6 +69,7 @@
   bottom: 0;
   left: 0;
   overflow: auto;
+  scrollbar-width: 0;
 
   &__overlay {
     display: flex;
